<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WordList</string>
    <string name="searchText">Search a word:</string>
    <string name="buttonSearch">Search</string>
    <string name="buttonAddNewWord">Add new word</string>
    <string name="buttonPlay">Play!</string>
    <string name="title_activity_add_word">Add New Word</string>
    <string name="addWordText">New word:</string>
    <string name="meaningText">Meaning:</string>
    <string name="buttonSaveNewWord">Save</string>
    <string name="buttonVolverPrincipal">Back</string>
    <string name="dictionaryText">List (the list will automatically be created if it does not exist):</string>
    <string name="Saved">Saved</string>
    <string name="title_activity_play">Play</string>
    <string name="playMsg">Time to play!</string>
    <string name="selectDictionary">Which list do you want to play with?</string>
    <string name="playMore">Give me another word!</string>
    <string name="stopPlaying">Stop playing!</string>
    <string name="solution">Solve and play more!</string>
    <string name="searchedWords">Words similar to:</string>
    <string name="close">Close</string>
    <string name="delete">Delete selected words</string>
    <string name="deleted">Deleted: </string>
    <string name="solutionTitle">Solution</string>
    <string name="errorSaveParams">Please, fill in the fields: word, meaning and list</string>
    <string name="errorEmptyList">There is no list selected</string>
    <string name="meaning_play_title">Do you know the meaning of...?</string>

</resources>
