<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="es.juanjo.wordlist.wordlist.PlayActivity$PlaceholderFragment">

    <TextView android:text="@string/playMsg" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playMsgText"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/playMsgText"
        android:text="@string/selectDictionary"
        android:id="@+id/textView" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerDiccionarios"
        android:layout_below="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playButton"
        android:text="@string/buttonPlay"
        android:layout_below="@+id/textView"
        android:layout_toRightOf="@id/spinnerDiccionarios"
        android:onClick="play"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/buttonVolverPrincipal"
        android:id="@+id/buttonVolverPrincipal"
        android:layout_below="@id/spinnerDiccionarios"
        android:layout_marginTop="10dp"
        android:onClick="backToMain"/>

</RelativeLayout>
