<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:id="@+id/relativeLayout">

    <TextView
        android:text="@string/addWordText"
        android:id="@+id/textAddWord"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <EditText
        android:id="@+id/editTextAddWord"
        android:inputType="textAutoComplete"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/textAddWord"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:text="@string/meaningText"
        android:id="@+id/textMeaning"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/editTextAddWord"/>

    <EditText
        android:id="@+id/editTextMeaning"
        android:inputType="textMultiLine"
        android:lines="2"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/textMeaning"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:text="@string/dictionaryText"
        android:id="@+id/textDictionary"
        android:layout_below="@id/editTextMeaning"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

    <AutoCompleteTextView
        android:id="@+id/editTextDictionary"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/textDictionary"
        android:completionThreshold="1"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/buttonSaveNewWord"
        android:id="@+id/buttonSaveNewWord"
        android:layout_below="@id/editTextDictionary"
        android:layout_marginTop="10dp"
        android:onClick="saveWord"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/buttonVolverPrincipal"
        android:id="@+id/buttonVolverPrincipal"
        android:layout_below="@id/editTextDictionary"
        android:layout_toRightOf="@id/buttonSaveNewWord"
        android:layout_marginTop="10dp"
        android:onClick="backToMain"/>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/buttonPlay"
        android:id="@+id/buttonPlay"
        android:layout_below="@id/editTextDictionary"
        android:layout_toRightOf="@id/buttonVolverPrincipal"
        android:layout_marginTop="10dp"
        android:onClick="showPlayActivity"/>
</RelativeLayout>
