<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:id="@+id/relativeLayout">

   <TextView
            android:layout_width="wrap_content"
            android:text="@string/searchText"
            android:id="@+id/textViewSearch"
            android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="wrap_content"
        android:inputType="textAutoComplete"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"/>


    <Button
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/buttonAddNewWord"
        android:id="@+id/buttonAddNewWord"
        android:layout_below="@id/editTextSearch"
        android:layout_marginTop="50dp"
        android:onClick="showAddWordIntent"/>

    <Button
        android:layout_height="wrap_content"
        android:text="@string/buttonPlay"
        android:layout_width="wrap_content"
        android:id="@+id/buttonPlay"
        android:layout_toEndOf="@+id/buttonAddNewWord"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/editTextSearch"
        android:onClick="showPlayActivity"/>



</RelativeLayout>
